fix header alignment (planner)

--- a/site/web/app/themes/open-data-week-theme/assets/styles/components/_calendar.scss
+++ b/site/web/app/themes/open-data-week-theme/assets/styles/components/_calendar.scss
@@ -203,7 +203,7 @@ font { display: none; }
                 @extend .row, .col-md-12, .align-items-start;
                 .header {
                     @extend .col-md-12;
-                    padding: 0 0 0 20px;
+                    padding: 0;
                 }
                 .event {
                     @extend .rounded;
